Some minor changes

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
       align-content: center;
     "
   >
+    <h1 style="text-align: center;">My Shopping Cart</h1>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div
       style="align-items: center; text-align: center; margin-top: 20px;"
